--- a/styles/post.css
+++ b/styles/post.css
@@ -9,10 +9,7 @@ main
 
 .post-grid
 {
-  display: flex;
   max-width: 100%;
-  flex-direction: column;
-
 }
 
 
