--- a/styles/sidebar-left.css
+++ b/styles/sidebar-left.css
@@ -229,7 +229,7 @@ cursor: pointer;
 
 
 
-@media (max-width: 1327px)
+@media (max-width: 1550px)
 {
 
   .sidebar-left
