--- a/styles/sidebar-right.css
+++ b/styles/sidebar-right.css
@@ -460,7 +460,7 @@ width: 100%;
 }
 
 
-@media(max-width:850px)
+@media(max-width:920px)
 {
 
   .sidebar-right
